Add: meta tags in index.html file

--- a/index.html
+++ b/index.html
@@ -2,9 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
+    <!-- Primary Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cancha Libre | Reserva tu cancha deportiva en menos de un minuto</title>
+    <meta name="description"
+      content="Reserva tu cancha deportiva en segundos. Sin llamadas, sin complicaciones. Juega cuando quieras." />
+    <meta name="language" content="es" />
+    <meta name="author" content="CanchaLibre" />
+    <meta name="subject" content="Reserva tu cancha deportiva en segundos. Sin llamadas, sin complicaciones. Juega cuando quieras." />
+    <meta name="pagename" content="CanchaLibre" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="light" />
+    <meta name="apple-mobile-web-app-title" content="CanchaLibre" />
+    <meta httpEquiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta href="/atom.xml" type="application/atom+xml" rel="alternate" title="CanchaLibre" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="CanchaLibre" />
+    <meta property="og:description"
+      content="Reserva tu cancha deportiva en segundos. Sin llamadas, sin complicaciones. Juega cuando quieras." />
+    <meta property="og:image" content="/src/assets/campo_de_basket.jpeg" />
+    <meta property="og:image:alt"
+      content="Reserva tu cancha deportiva en segundos. Sin llamadas, sin complicaciones. Juega cuando quieras." />
+    <meta property="og:url" content="https://canchalibre.pro" />
+    <meta property="og:site_name" content="CanchaLibre" />
+    <meta property="og:locale" content="es" />
+
+    <!-- Prefetch -->
+    <link rel="prefetch" href="/" />
   </head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-6C7S4GBJSV"></script>
