--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <!-- Primary Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cancha Libre | Reserva tu cancha deportiva en menos de un minuto</title>
@@ -25,7 +25,7 @@
     <meta property="og:title" content="CanchaLibre" />
     <meta property="og:description"
       content="Reserva tu cancha deportiva en segundos. Sin llamadas, sin complicaciones. Juega cuando quieras." />
-    <meta property="og:image" content="/src/assets/campo_de_basket.jpeg" />
+    <meta property="og:image" content="/campo_de_basket.jpeg" />
     <meta property="og:image:alt"
       content="Reserva tu cancha deportiva en segundos. Sin llamadas, sin complicaciones. Juega cuando quieras." />
     <meta property="og:url" content="https://canchalibre.pro" />
